# hybrid-search-demo

./: .env.example  .gitignore  GUIDE.md  README.md  app.py  pyproject.toml  write-to-pinecone-dense.py  write-to-pinecone-sparse.py
example_data/: 10-k_aapl_2019.csv  10-k_aapl_2020.csv  10-k_aapl_2021.csv  10-k_aapl_2022.csv  10-k_aapl_2023.csv  10-k_aapl_2024.csv  10-k_amzn_2019.csv  10-k_amzn_2020.csv  10-k_amzn_2021.csv  10-k_amzn_2022.csv  10-k_amzn_2023.csv  10-k_amzn_2024.csv  10-k_f_2019.csv  10-k_f_2020.csv  10-k_f_2021.csv  10-k_f_2022.csv  10-k_f_2023.csv  10-k_f_2024.csv  10-k_gm_2019.csv  10-k_gm_2020.csv  10-k_gm_2021.csv  10-k_gm_2022.csv  10-k_gm_2023.csv  10-k_gm_2024.csv  10-k_msft_2019.csv  10-k_msft_2020.csv  10-k_msft_2021.csv  10-k_msft_2022.csv  10-k_msft_2023.csv  10-k_msft_2024.csv  10-k_orcl_2019.csv  10-k_orcl_2020.csv  10-k_orcl_2021.csv  10-k_orcl_2022.csv  10-k_orcl_2023.csv  10-k_orcl_2024.csv  README.md
